# py4web-debug-tools

./: .gitignore  CHANGELOG.md  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
py4web_debug/: __init__.py  core.py  debugbar.py  dumping.py  env.py  internals.py  wsgi.py
py4web_debug/templates/: debugbar.html  debugbar_bs4.html  debugbar_bs5.html  debugbar_bulma.html  debugbar_generic.html  error_default.html  fancy_dumpdie.html
src/py4web_debug/: __init__.py  _internals.py  core.py  debugbar.py  dumping.py  env.py  internals.py  types.py  wsgi.py
src/py4web_debug/templates/: dumpdie.html
